--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "https://pacomarm.github.io/gif-search/",
   "name": "gif-app",
   "version": "0.1.0",
   "private": true,
