--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     ]
   },
   "devDependencies": {
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.1",
     "gh-pages": "^3.1.0"
   }
 }
